 * DxVA2 GPU-zerocopy for hardware decoding and displaying on Windows
 * Support 9-bit and 10-bit GBR planar formats
 * New hardware accelerated decoder for OS X and and iOS based on Video Toolbox
   supporting H.263, H.264/MPEG-4 AVC, MPEG-4 Part 2, and DV depending on device
   and OS version
 * Support for the OggSpots video codec

Demuxers:
 * Support HD-DVD .evo (H.264, VC-1, MPEG-2, PCM, AC-3, E-AC3, MLP, DTS)
 * Support Opus in MPEG Transport Stream
 * Support Daala in Ogg
 * Important rework of the MP4 demuxer, including fragments
 * Support EIA-608 subtitles in MP4/mov
 * Support SBV subtitles
 * Support WMV and WMAV in MP4/mov, aka Flip4Mac files
 * Support bitmap audio channel reordering in MP4/mov
 * Support AlbumArtist and DiscNumber metadata
 * Important rework of the TS demuxer, including:
    * Fixed program selection with recorded TS (TopField, DreamBox and others)
    * Fixed TS playback with PAT/PMT less recordings
    * Basic support for MPEG4-SL in TS and T-DMB
 * Support for lame's replaygain extension in mpeg files
 * Fixes for DTS detection in WAV and MKV files
 * Support for Creative ADPCM/alaw/ulaw/S16L in VOC files
 * Support for Creative ADPCM in AVI
 * Directory Demux can now sort items, ignore extensions and hidden files
 * Replaced httplive stream filter with new HLS demuxer, replaced smooth 
   stream filter with new Smooth demuxer, both using unified adaptive module
 * Improved smooth streaming compatibility
 * Support SCTE-18 / EAS inside TS
 * Support for RTP Reception Hint Track In MP4 with H.264, GSM and Speex payloads.

Stream filter:
 * Added ARIB STD-B25 TS streams decoder
 * Added stream prebuffering plugin
 * Removed HTTP Live streaming stream filter
 * Added zlib (a.k.a. deflate) decompression filter

Audio output:
 * Complete rewrite of the AudioTrack Android module. This is now the default.
   It now supports HDMI/SPDIF passthrough for AC3, 5.1/7.1 and float output.
 * Added Tizen audio module.

Audio filters and output: